<resources>
    <string name="app_name">Latihan_Intent</string>
    <string name="move_activity">Pindah Aktivitas</string>
    <string name="move_with_data">Pindah Aktivitas dengan Data</string>
    <string name="dial_number">Panggil Nomor</string>
    <string name="data_received">Data Diterima</string>
    <string name="this_is_moveactivity">Ini Move Activity</string>
    <string name="move_with_object">Ini Move dengan Object</string>
    <string name="choose_number">Pilih Nomor</string>
    <string name="rb_50">50</string>
    <string name="rb_100">100</string>
    <string name="rb_150">150</string>
    <string name="rb_200">200</string>
    <string name="choose">Pilih</string>
    <string name="move_with_result">Pindah Aktifitas untuh Hasil</string>
    <string name="result_from_activity">Hasil</string>


</resources>
